Fix bug in Swiper display
Needed to limit the height of the inner <img> otherwise there'd be
"invisible" containers taller than the 800px of the container. The image
would then stretch to fill the >1000px tall <img> and look pretty bad

--- a/static/styles.css
+++ b/static/styles.css
@@ -602,26 +602,36 @@ button.consent-btn img {
 
 .swiper {
   width: 100%;
-  max-height: 550px;
   aspect-ratio: 21/9;
 }
 
 @media (min-width: 1000px) {
-  .swiper {
+  .swiper-slide img {
     max-height: 500px;
   }
 }
 
 @media (min-width: 1500px) {
-  .swiper {
+  .swiper-slide img {
     max-height: 650px;
   }
 }
 
 @media (min-width: 1800px) {
   .swiper {
-    max-height: 950px;
+    max-height: 800px;
   }
+  .swiper-slide img {
+    max-height: 800px;
+  }
+}
+
+.swiper-wrapper {
+  height: 100%;
+}
+
+.swiper-slide {
+  height: 100%;
 }
 
 .swiper-slide picture {
